# HW-6_DV

./: .gitignore  README.md  main.py  pyproject.toml
cfg/: params.py
src/: train.py
src/data/: make_dataset.py
src/models/: LSTMNet.py
test/: LSTMNet_model_test.py  main_test.py  make_dataset_test.py  train_model_test.py
